--- a/style.css
+++ b/style.css
@@ -72,10 +72,23 @@
 .experiens {
     background-image: url(img/images/exp-bg.png);
     background-repeat: no-repeat;
+    background-position: left;
 }
 
-.experiens h1 {
+.experiens-h1 {
     font-size: 50px;
-    margin: 20px 0 0 40px;
     font-weight: 700;
+}
+
+.experiend-section {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.experiend-section .experiens-div {
+    box-shadow: 10px 10px 40px #ddd;
+    width: 40%;
+    padding: 2%;
+    margin-top: 30px;
+    border-left: 5px solid #455906;
 }
