--- a/style.css
+++ b/style.css
@@ -75,20 +75,42 @@
     background-position: left;
 }
 
-.experiens-h1 {
-    font-size: 50px;
+h2 {
+    font-size: 40px;
     font-weight: 700;
+    margin: 20px 0 40px 0px;
 }
 
 .experiend-section {
     display: flex;
-    justify-content: space-evenly;
+    margin-bottom: 100px;
 }
 
-.experiend-section .experiens-div {
-    box-shadow: 10px 10px 40px #ddd;
+.experiens-div {
     width: 40%;
-    padding: 2%;
-    margin-top: 30px;
-    border-left: 5px solid #455906;
+    margin: 5%;
+    padding-left: 30px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+}
+
+.xp-h3 {
+    color: orange;
+    margin-bottom: 15px;
+}
+
+#pro-div {
+    border-left: 5px solid salmon;
+    border-image-slice: 1;
+}
+
+#baby-div {
+    border-image: linear-gradient(blue, rgb(96, 28, 173));
+    border-left: 5px solid;
+    border-image-slice: 1;
+}
+
+.copy {
+    text-align: center;
+    margin-bottom: 20px;
 }
